--- a/Barjonas.Common.Windows/View/Lights.xaml
+++ b/Barjonas.Common.Windows/View/Lights.xaml
@@ -19,27 +19,35 @@
         </DockPanel>
     </DataTemplate>
     <DataTemplate DataType="{x:Type lights:StateLevels}">
-        <StackPanel>
-            <TextBlock Text="{Binding Key}"/>
-            <DockPanel>
-                <ItemsControl ItemsSource="{Binding Levels}" Margin="10 0 0 0">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-                <controls:NumericUpDown Value="{Binding FlashOnDuration}" Interval="0.1" StringFormat="0.0#" Minimum="0" Maximum="5" NumericInputMode="Decimal" controls:TextBoxHelper.Watermark="On (s)" DockPanel.Dock="Left" />
-                <controls:NumericUpDown Value="{Binding FlashOffDuration}" Interval="0.1" StringFormat="0.0#" Minimum="0" Maximum="5" NumericInputMode="Decimal" controls:TextBoxHelper.Watermark="Off (s)" DockPanel.Dock="Left" />
-                <controls:NumericUpDown Value="{Binding FlashCount}" NumericInputMode="Numbers" Minimum="0" Maximum="99" controls:TextBoxHelper.Watermark="Count" DockPanel.Dock="Left" />
-            </DockPanel>
+        <StackPanel Orientation="Horizontal">
+            <Rectangle Height="66" Width="1" StrokeThickness="1" Stroke="{StaticResource MahApps.Brushes.Accent}" Margin="0 -5 0 5"/>
+            <StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle Width="4" Stroke="{StaticResource MahApps.Brushes.Accent}" StrokeThickness="1" Height="1" />
+                    <TextBlock Text="{Binding Key}"/>
+                </StackPanel>
+                <DockPanel>
+                    <ItemsControl ItemsSource="{Binding Levels}" Margin="10 0 0 0">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                    <controls:NumericUpDown Value="{Binding FlashOnDuration}" Interval="0.1" StringFormat="0.0#" Minimum="0" Maximum="5" NumericInputMode="Decimal" controls:TextBoxHelper.Watermark="On (s)" DockPanel.Dock="Left" />
+                    <controls:NumericUpDown Value="{Binding FlashOffDuration}" Interval="0.1" StringFormat="0.0#" Minimum="0" Maximum="5" NumericInputMode="Decimal" controls:TextBoxHelper.Watermark="Off (s)" DockPanel.Dock="Left" />
+                    <controls:NumericUpDown Value="{Binding FlashCount}" NumericInputMode="Numbers" Minimum="0" Maximum="99" controls:TextBoxHelper.Watermark="Count" DockPanel.Dock="Left" />
+                </DockPanel>
+            </StackPanel>
         </StackPanel>
     </DataTemplate>
     <DataTemplate DataType="{x:Type lights:StatePresetGroup}">
-        <StackPanel>
-            <TextBlock Text="{Binding Name}" />
-            <ItemsControl ItemsSource="{Binding StatesLevels}" Margin="10 0 0 0"/>
-        </StackPanel>
+        <Expander Header="{Binding Name}" IsExpanded="True">
+            <StackPanel>
+                <ItemsControl ItemsSource="{Binding StatesLevels}" Margin="3 0 0 0" />
+                <Rectangle Width="7" Stroke="{StaticResource MahApps.Brushes.Accent}" StrokeThickness="1" Height="1" Margin="0 -10 0 0" HorizontalAlignment="Left" />
+            </StackPanel>
+        </Expander>
     </DataTemplate>
     <DataTemplate DataType="{x:Type lights:Universe}">
         <DockPanel>
@@ -74,5 +82,50 @@
                 </UniformGrid>
             </Border>
         </Viewbox>
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type lights:FixtureChannel}">
+        <Border BorderBrush="DarkGray" BorderThickness="1" Background="#01000000">
+            <Border.ToolTip>
+                <TextBlock Background="Black" Padding="3">
+                    <TextBlock.Foreground>
+                        <SolidColorBrush Color="{Binding FixtureChannelType.Primary, FallbackValue=White}" />
+                    </TextBlock.Foreground>
+                    <Run Text="Universe "/>
+                    <Run Text="{Binding UniverseIndex}"/>
+                    <LineBreak/>
+                    <Run Text="Channel "/>
+                    <Run Text="{Binding Id}"/>
+                </TextBlock>
+            </Border.ToolTip>
+            <UniformGrid Columns="1" Margin="2" Height="30" Width="30">
+                <TextBlock Margin="2" Text="{Binding Id, Converter={StaticResource ToOneBased}}" HorizontalAlignment="Center" Style="{StaticResource SmallPrint}" VerticalAlignment="Center">
+                    <TextBlock.Foreground>
+                        <SolidColorBrush Color="{Binding FixtureChannelType.Primary, FallbackValue=Black}" />
+                    </TextBlock.Foreground>
+                </TextBlock>
+                <TextBox Text="{Binding Level}" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="10" BorderThickness="0" />
+            </UniformGrid>
+        </Border>
+    </DataTemplate>
+    <DataTemplate x:Key="Fixtures">
+        <ItemsControl ItemsSource="{Binding}" Grid.IsSharedSizeScope="True" />
+    </DataTemplate>
+    <DataTemplate DataType="{x:Type lights:Fixture}">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition SharedSizeGroup="Name" Width="Auto"/>
+                <ColumnDefinition SharedSizeGroup="Start" Width="Auto" />
+                <ColumnDefinition SharedSizeGroup="Channels"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="{Binding DisplayName}" VerticalAlignment="Center"/>
+            <controls:NumericUpDown Value="{Binding StartId, Converter={StaticResource ToOneBased}}" Grid.Column="1" ToolTip="Start channel"/>
+            <ItemsControl ItemsSource="{Binding Channels}" Grid.Column="2">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid Rows="1"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
+        </Grid>
     </DataTemplate>
 </ResourceDictionary>
