--- a/Barjonas.Common.Windows/View/SharedStyles.xaml
+++ b/Barjonas.Common.Windows/View/SharedStyles.xaml
@@ -15,6 +15,9 @@
     <Thickness x:Key="ControlMargin">10</Thickness>
     <Thickness x:Key="ControlSmallMargin">5</Thickness>
     <SolidColorBrush x:Key="ControlGroupBackground" Color="#22000000" />
+    <Style TargetType="{x:Type Expander}" BasedOn="{StaticResource {x:Type Expander}}">
+        <Setter Property="controls:ControlsHelper.ContentCharacterCasing" Value="Normal"/>
+    </Style>
     <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
         <Setter Property="controls:TextBoxHelper.SelectAllOnFocus" Value="True"/>
         <Setter Property="controls:TextBoxHelper.UseFloatingWatermark" Value="True"/>
