--- a/Barjonas.Common.Windows/View/IncomingTriggerDevice.xaml
+++ b/Barjonas.Common.Windows/View/IncomingTriggerDevice.xaml
@@ -66,7 +66,7 @@
             <StackPanel Orientation="Horizontal" Margin="{StaticResource ControlSmallMargin}">
                 <ContentControl Content="{Binding}" ContentTemplate="{StaticResource ServiceStatus}" VerticalAlignment="Center" />
                 <TextBlock Style="{StaticResource Heading}" Text="{Binding Name, Mode=OneWay}" VerticalAlignment="Center" Margin="{StaticResource ControlSmallMargin}"/>
-                <ItemsControl ItemsSource="{Binding ServiceState.Children}" ItemTemplate="{StaticResource ServiceStateMax}" VerticalAlignment="Center" />
+                <ItemsControl ItemsSource="{Binding ServiceState.Children.Values}" ItemTemplate="{StaticResource ServiceStateMax}" VerticalAlignment="Center" />
                 <ContentControl Content="{Binding}" />
             </StackPanel>
             <DataGrid ItemsSource="{Binding Triggers}" AutoGenerateColumns="False">
