--- a/Barjonas.Common.Windows/View/IncomingTriggerDevice.xaml
+++ b/Barjonas.Common.Windows/View/IncomingTriggerDevice.xaml
@@ -62,6 +62,9 @@
             </Grid.InputBindings>
         </Grid>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type commodel:IncomingTrigger}">
+        
+    </DataTemplate>
     <DataTemplate DataType="{x:Type commodel:IncomingTriggerDevice}" x:Key="IncomingTriggerDevice">
         <StackPanel Background="{StaticResource ControlGroupBackground}" Margin="{StaticResource ControlSmallMargin}">
             <StackPanel Orientation="Horizontal" Margin="{StaticResource ControlSmallMargin}">
@@ -89,7 +92,7 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTextColumn IsReadOnly="True" Binding="{Binding Setting.Name}" Header="Name" Width="Auto"/>
+                    <DataGridTextColumn Binding="{Binding Setting.Name}" Header="Name" Width="Auto"/>
                     <DataGridTemplateColumn Header="Down">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
